--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "ai-code-review",
   "packageManager": "yarn@4.4.1",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/node": "^22.13.1",
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
+    "jest": "^29.7.0",
     "moment": "^2.30.1",
     "openai": "^4.83.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.1"
   }
 }
