--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "ai-code-review",
   "packageManager": "yarn@4.4.1",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "build": "tsc",
     "test": "jest"
   },
   "dependencies": {
