--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-code-review",
+  "name": "ai-code-patterns",
   "packageManager": "yarn@4.4.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
